data/derived/sp14/progs/unify/prog3184.ml.out
Characters 275-290:
  removeZero (add (padZero l1 l2));;
                  ^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type
         int list * (int list * int list) list
       Type int is not compatible with type int list * int list 
